Build pour APK + ajout de vérification d'input + ajout multiplicateurs

--- a/app.json
+++ b/app.json
@@ -15,7 +15,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.pierric.DartGame"
     },
     "web": {
       "bundler": "metro",
@@ -36,6 +37,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "423d6ad1-f517-4f8c-a249-6e6f86c13f2c"
+      }
     }
   }
 }
